2012-02-17  Stefan Sauer  <ensonic@users.sf.net>

	* AsDev/a4pFilter01/a4pFilter01.cpp:
	* Elenzil/FrequencyBomb/freqbomb.cpp:
	* Elenzil/Modulator/amplitude_modulator.cpp:
	* MadBrain/4fm2f/4fm2f.cpp:
	* MadBrain/Dynamite6/Dynamite6.cpp:
	* Q/Rebond/rebond.cpp:
	  Fix compiler warnings/errors.

2012-02-16  flip  <flip10000@users.sf.net>

	* Zwar/Makefile.am:
	* Zwar/Makefile.am (added):
	Added Makefile for Zwar.

2012-02-16  flip  <flip10000@users.sf.net>

	* HACKING:
	* Makefile.am:
	* configure.ac:
	Updated HACKING and Makefile.

2012-02-16  flip  <flip10000@users.sf.net>

	* Zwar/11Stereo/11Stereo.bmx:
	* Zwar/11Stereo/11Stereo.cpp:
	* Zwar/11Stereo/Makefile.am:
	* Zwar/Csi/Csi.bmx:
	* Zwar/Csi/Csi.cpp:
	* Zwar/Csi/Makefile.am:
	* Zwar/11Stereo/11Stereo.bmx (svn:mime-type):
	* Zwar/Csi/Csi.bmx (svn:mime-type):
	* Zwar/11Stereo (added):
	* Zwar/11Stereo/11Stereo.cpp (added):
	* Zwar/11Stereo/11Stereo.bmx (added):
	* Zwar/11Stereo/Makefile.am (added):
	* Zwar/Csi/Csi.cpp (added):
	* Zwar/Csi/Csi.bmx (added):
	* Zwar/Csi/Makefile.am (added):
	Ported:
	Zwar 11Stereo
	Zwar Csi

2012-02-16  flip  <flip10000@users.sf.net>

	* Zwar/11stereo (deleted):
	Remove old files.

2012-02-16  flip  <flip10000@users.sf.net>

	* Zwar/11stereo/11-Stereo.cpp (deleted):
	* Zwar/11stereo/11-Stereo.bmx (deleted):
	* Zwar/Csi/CSI.CPP (deleted):
	* Zwar/Csi/CSI.bmx (deleted):
	Remove old files.

2012-02-16  flip  <flip10000@users.sf.net>

	* AsDev/Makefile.am:
	* AsDev/a4pFilter01/Makefile.am:
	* AsDev/a4pFilter01/a4pFilter01.cpp:
	* Elenzil/FrequencyBomb/Makefile.am:
	* Elenzil/FrequencyBomb/freqbomb.cpp:
	* Elenzil/Makefile.am:
	* Elenzil/Modulator/Makefile.am:
	* Elenzil/Modulator/amplitude_modulator.cpp:
	* HACKING:
	* MadBrain/4fm2f/4fm2f.cpp:
	* MadBrain/4fm2f/Makefile.am:
	* MadBrain/Dynamite6/Dynamite6.cpp:
	* MadBrain/Dynamite6/Makefile.am:
	* MadBrain/Makefile.am:
	* Makefile.am:
	* Q/Makefile.am:
	* Q/Rebond/Makefile.am:
	* Q/Rebond/rebond.cpp:
	* Q/Zfilter/Makefile.am: